# vehicle-controller

./: LICENSE  README.md
firmware/: Cargo.toml  README.md
firmware/common/: Cargo.toml
firmware/common/src/: crc8.rs  ev_can.rs  lib.rs  monitor_message.rs  monitor_serial.rs  throttle.rs  timeout.rs
firmware/direction-app/: Cargo.toml  memory.x
firmware/direction-app/.cargo/: config.toml
firmware/direction-app/src/: button.rs  main.rs
firmware/main-app/: Cargo.toml  memory.x
firmware/main-app/src/: main.rs
firmware/main-boot/: Cargo.toml  README.md
firmware/monitor-app/: Cargo.toml  memory.x
firmware/monitor-app/src/: board.rs  main.rs
firmware/monitor-app/src/monitors/: main_app.rs  mod.rs  throttle.rs  torque.rs
firmware/monitor-boot/: Cargo.toml  README.md
firmware/monitor-boot/src/: board.rs  main.rs
hardware/: .gitignore
hardware/aphid-bms-master/: #auto_saved_files#  aphid-bms-master.kicad_pcb  aphid-bms-master.kicad_pro  aphid-bms-master.kicad_sch  can.kicad_sch  contactors.kicad_sch  max17851.kicad_sch  mcu.kicad_sch  power.kicad_sch  slave_power.kicad_sch  ~aphid-bms-master.kicad_sch.lck
hardware/aphid-bms-slave/: ades1754.kicad_sch  aphid-bms-slave.kicad_pcb  aphid-bms-slave.kicad_pro  aphid-bms-slave.kicad_sch  cell_interface.kicad_sch  fp-lib-table  temp_sensing.kicad_sch  uart_isolation.kicad_sch
hardware/aphid-direction-controller/: MCU.kicad_sch  README.md  aphid-direction-controller.kicad_pcb  aphid-direction-controller.kicad_pro  aphid-direction-controller.kicad_sch  buttons.kicad_sch  can.kicad_sch  connectors.kicad_sch  leds.kicad_sch  power.kicad_sch  sym-lib-table
hardware/aphid-vehicle-controller/: analog.kicad_sch  aphid-vehicle-controller.kicad_pcb  aphid-vehicle-controller.kicad_pro  aphid-vehicle-controller.kicad_sch  aphid-vehicle-controller.kicad_sym  brake.kicad_sch  can.kicad_sch  connectors.kicad_sch  digital.kicad_sch  direction.kicad_sch  fp-lib-table  hso.kicad_sch  inputs.kicad_sch  mcu.kicad_sch  monitor.kicad_sch  power.kicad_sch  reset.kicad_sch  sym-lib-table
hardware/aphid-vehicle-controller/aphid-vehicle-controller.pretty/: ModICE_ME-MX_24.kicad_mod
hardware/libraries/: aphid.kicad_sym
hardware/libraries/aphid.pretty/: ABM3-x.xxxMHZ-D2Y-T.kicad_mod  ACT1210D.kicad_mod  DLW43SH.kicad_mod  ModICE_ME-MX_24.kicad_mod
