[package]
name = "direction-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.5.0", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "time-driver-any",
    "stm32g431cb",
    "memory-x",
    "unstable-pac",
] }
embassy-time = { version = "0.3.0", features = ["defmt", "tick-hz-32_768"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-can = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
codegen-units = 1
debug = true
