[package]
name = "main-app"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
nb = "1.1.0"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f405"] }

